@@ -1,26 +1,34 @@
-import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 public class HttpResponseBuilder {
 
     public HttpResponse build200(String responseBody) {
-        List<String> headers =  getResponseBodyHeaders(responseBody);
+        return build200(responseBody, Map.of());
+    }
 
-        return new HttpResponse(headers, responseBody, HttpStatus.OK);
+    public HttpResponse build200(String responseBody, Map<String, String> overrideHeaders) {
+        Map<String, String> headers = new LinkedHashMap<>();
+
+        if (responseBody != null && !responseBody.isBlank()) {
+            headers.put("Content-Length", String.valueOf(responseBody.length()));
+            headers.put("Content-Type", "text/plain");
+        }
+
+        headers.putAll(overrideHeaders);
+
+        return new HttpResponse(toHeaderList(headers), responseBody, HttpStatus.OK);
     }
 
     public HttpResponse build404() {
-        return new HttpResponse(Collections.emptyList(), "", HttpStatus.NOT_FOUND);
+        return new HttpResponse(List.of(), "", HttpStatus.NOT_FOUND);
     }
 
-    private List<String> getResponseBodyHeaders(String responseBody) {
-        if (responseBody.isBlank()) {
-            return Collections.emptyList();
-        }
-        String contentLengthH = "Content-Length: " + responseBody.length();
-        String contentTypeH = "Content-Type: application/octet-stream";
-        return List.of(contentLengthH, contentTypeH);
+    private List<String> toHeaderList(Map<String, String> headers) {
+        return headers.entrySet()
+                .stream()
+                .map(entry -> entry.getKey() + ": " + entry.getValue())
+                .toList();
     }
-
-
 }
